# ForestGemini

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  fc3d_gemini.cpp  fc3d_gemini.h  fc3d_gemini_options.c  fc3d_gemini_options.h
cmake/: forestclaw.cmake  gemini3d.cmake  libraries.json  options.cmake
examples/: CMakeLists.txt  gemini.cmake
examples/simple/: CMakeLists.txt  fclaw_options.ini  fclaw_options.ini.used  simple  simple.cpp  simple_options.c  simple_user.cpp  simple_user.h
examples/simple/mini3d_fang/inputs/: config.nml  initial_conditions.h5  simgrid.h5  simsize.h5
examples/simple/mini3d_fang/inputs/Efield/: 20130220_18000.000000.h5  20130220_18060.000000.h5  20130220_18120.000000.h5  20130220_18180.000000.h5  20130220_18240.000000.h5  20130220_18300.000000.h5  simsize.h5
examples/simple/mini3d_fang/inputs/precip/: 20130220_18000.000000.h5  20130220_18060.000000.h5  20130220_18300.000000.h5
examples/simple/mini3d_glow/: 20130220_18000.000000.h5  20130220_18060.000000.h5  20130220_18120.000000.h5  20130220_18180.000000.h5  20130220_18240.000000.h5  20130220_18300.000000.h5  output.nml  setup_grid.json  sha256sum.txt
examples/simple/mini3d_glow/aurmaps/: 20130220_18000.000000.h5  20130220_18060.000000.h5  20130220_18120.000000.h5  20130220_18180.000000.h5  20130220_18240.000000.h5  20130220_18300.000000.h5
examples/simple/mini3d_glow/inputs/: config.nml  setup_grid.json  simgrid.h5
examples/simple/mini3d_glow/inputs/Efield/: 20130220_18000.000000.h5  20130220_18060.000000.h5  20130220_18120.000000.h5  20130220_18180.000000.h5  20130220_18240.000000.h5  20130220_18300.000000.h5  simgrid.h5
examples/simple/mini3d_glow/inputs/precip/: 20130220_18120.000000.h5  20130220_18180.000000.h5  20130220_18240.000000.h5
examples/simple/user_4.6/: qinit.f90
fortran_source/: fc3d_gemini_bc3_default.f90  fc3d_gemini_block.f90
src/: fc3d_gemini_fort.h  fc3d_gemini_fort_user.h  fc3d_gemini_options.c  fc3d_gemini_options.h
user_fortran_source/: b4step3.f90  bc3.f90  qinit.f90  setaux.f90  setprob.f90  src3.f90
